Fix userInfoCard for mobile view
Why:
- Currently, the UserInfoCard can flow out of the viewport
- The pop arrow looks offset and it's not pointing to the button
- In Safari browser, the chart section looks off and doesn't show the
  "lines" with 0 values

What:
- Fix popover arrow style in userInfoCard.less
- Fix `width` in the popover styles (don't use min-width or max-width)
- Add a small offset to the y-axis domain in the CSparkline.vue
  component so it displays properly in Safari (other browsers should
  not be affected)

Bug: T396443

--- a/modules/ext.checkUser.styles/userInfoCard.less
+++ b/modules/ext.checkUser.styles/userInfoCard.less
@@ -24,10 +24,14 @@
 
 		&--userAvatar {
 			.cdx-mixin-css-icon( @cdx-icon-user-avatar, @param-is-button-icon: true, @param-size-icon: @size-icon-small );
+			// This is important for the arrow popover because we're customizing the icon size
+			min-width: @size-125;
 		}
 
 		&--userTemporary {
 			.cdx-mixin-css-icon( @cdx-icon-user-temporary, @param-is-button-icon: true, @param-size-icon: @size-icon-small );
+			// This is important for the arrow popover because we're customizing the icon size
+			min-width: @size-125;
 		}
 	}
 }
